--- a/session2/package.json
+++ b/session2/package.json
@@ -1,8 +1,7 @@
 {
   "name": "session2",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,5 +10,7 @@
   "dependencies": {
     "express": "^4.14.1",
     "nodemon": "^1.11.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
