--- a/session2/package.json
+++ b/session2/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.1",
+    "morgan": "^1.7.0",
     "nodemon": "^1.11.0"
   },
   "devDependencies": {},
