--- a/session2/package.json
+++ b/session2/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.14.1",
     "morgan": "^1.7.0",
+    "mustache": "^2.3.0",
     "nodemon": "^1.11.0"
   },
   "devDependencies": {},
